changed to direct references to the image to fix container sizing issue on mobile vs desktop. Removed orphaned CSS code.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,21 +46,6 @@ header .highlight, header .current a {
     color: #de641b; /* Darker orange for emphasis */
     font-weight: bold;
 }
-/* Showcase */
-#showcase {
-    min-height: 550px;
-    background: url("../images/showcase.jpeg") no-repeat center top;
-    background-size: 100%; /* Showcase image is at 100% of its size */
-    text-align: center;
-    color: #fff5e6;
-}
-#altShowcase {
-    min-height: 550px;
-    background: url("../images/alt-showcase.jpeg") no-repeat center top;
-    background-size: 100%; /* Showcase image is at 100% of its size */
-    text-align: center;
-    color: #fff5e6;
-}
 /* Newsletter */
 #sidebar .dark {
     padding: 15px;
